add distrobox app

--- a/roles/core/tasks/fedora.yml
+++ b/roles/core/tasks/fedora.yml
@@ -13,6 +13,7 @@
   dnf:
     name:
     - flatpak
+    - distrobox
     - distribution-gpg-keys
     - mozilla-openh264
     - libavcodec-freeworld
