--- a/roles/desktop/defaults/main.yml
+++ b/roles/desktop/defaults/main.yml
@@ -1,12 +1,15 @@
 gnomeconf:
  /org/gnome/desktop/input-sources/show-all-sources: "true"
+ /org/gnome/desktop/input-sources/xkb-options: "['ctrl:hyper_capscontrol']"
  /org/gnome/desktop/interface/color-scheme: "'prefer-dark'"
  /org/gnome/shell/enabled-extensions: "['background-logo@fedorahosted.org', 'appindicatorsupport@rgcjonas.gmail.com', 'dash-to-panel@jderose9.github.com', 'blur-my-shell@aunetx', 'pip-on-top@rafostar.github.com']"
  /org/gnome/shell/extensions/dash-to-panel/animate-appicon-hover: "true"
  /org/gnome/shell/extensions/dash-to-panel/animate-appicon-hover-animation-type: "'SIMPLE'"
  /org/gnome/shell/extensions/dash-to-panel/appicon-margin: 2
  /org/gnome/shell/extensions/dash-to-panel/appicon-padding: 4
- /org/gnome/shell/extensions/dash-to-panel/panel-positions: "'{\"0\":\"TOP\"}'"
- /org/gnome/shell/extensions/dash-to-panel/panel-sizes: "'{\"0\":32}'"
- /org/gnome/shell/extensions/dash-to-panel/panel-element-positions: "'{\"0\":[{\"element\":\"showAppsButton\",\"visible\":false,\"position\":\"stackedTL\"},{\"element\":\"activitiesButton\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"leftBox\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"taskbar\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"centerBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"rightBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"dateMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"systemMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"desktopButton\",\"visible\":true,\"position\":\"stackedBR\"}]}'"
+ /org/gnome/shell/extensions/dash-to-panel/available-monitors: "[0,1]"
+ /org/gnome/shell/extensions/dash-to-panel/primary-monitor: 0
+ /org/gnome/shell/extensions/dash-to-panel/panel-positions: "'{\"0\":\"TOP\",\"1\":\"TOP\"}'"
+ /org/gnome/shell/extensions/dash-to-panel/panel-sizes: "'{\"0\":32,\"1\":32}'"
+ /org/gnome/shell/extensions/dash-to-panel/panel-element-positions: "'{\"0\":[{\"element\":\"showAppsButton\",\"visible\":false,\"position\":\"stackedTL\"},{\"element\":\"activitiesButton\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"leftBox\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"taskbar\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"centerBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"rightBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"dateMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"systemMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"desktopButton\",\"visible\":true,\"position\":\"stackedBR\"}],\"1\":[{\"element\":\"showAppsButton\",\"visible\":false,\"position\":\"stackedTL\"},{\"element\":\"activitiesButton\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"leftBox\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"taskbar\",\"visible\":true,\"position\":\"stackedTL\"},{\"element\":\"centerBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"rightBox\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"dateMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"systemMenu\",\"visible\":true,\"position\":\"stackedBR\"},{\"element\":\"desktopButton\",\"visible\":true,\"position\":\"stackedBR\"}]}'"
  /org/gnome/desktop/wm/preferences/focus-mode: "'sloppy'"
