add flatpak Remina and Spotube

--- a/roles/apps/tasks/main.yml
+++ b/roles/apps/tasks/main.yml
@@ -23,3 +23,5 @@
     - org.gnome.gThumb
     - org.darktable.Darktable
     - org.gimp.GIMP
+    - com.github.KRTirtho.Spotube
+    - org.remmina.Remmina
