--- a/roles/apps/tasks/main.yml
+++ b/roles/apps/tasks/main.yml
@@ -25,3 +25,5 @@
     - org.gimp.GIMP
     - com.github.KRTirtho.Spotube
     - org.remmina.Remmina
+    - hu.irl.cameractrls
+    - com.moonlight_stream.Moonlight
