--- a/roles/core/tasks/fedora.yml
+++ b/roles/core/tasks/fedora.yml
@@ -12,10 +12,10 @@
   become: yes
   dnf:
     name:
-    - @hardware-support
-    - @c-development
-    - @container-management
-    - @fonts
+    - "@hardware-support"
+    - "@c-development"
+    - "@container-management"
+    - "@fonts"
     - flatpak
     - distrobox
     - kubernetes-client
@@ -35,3 +35,15 @@
     - rust-analyzer
     - dbus-devel 
     - pkgconf-pkg-config
+    - ufraw
+
+- name: Fedora | Enable raw photos preview with ufraw
+  become: yes
+  copy:
+    content: |
+      [Thumbnailer Entry]
+      TryExec=ufraw
+      Exec=ufraw-batch --embedded-image --out-type=png --size=%s %i --overwrite --silent --output=%o
+      MimeType=application/x-ufraw;image/x-dcraw;image/x-3fr;image/x-adobe-dng;image/x-arw;image/x-bay;image/x-canon-cr2;image/x-canon-crw;image/x-cap;image/x-cr2;image/x-crw;image/x-dcr;image/x-dcraw;image/x-dcs;image/x-dng;image/x-drf;image/x-eip;image/x-erf;image/x-fff;image/x-fuji-raf;image/x-iiq;image/x-k25;image/x-kdc;image/x-mef;image/x-minolta-mrw;image/x-mos;image/x-mrw;image/x-nef;image/x-nikon-nef;image/x-nrw;image/x-olympus-orf;image/x-orf;image/x-panasonic-raw;image/x-pef;image/x-pentax-pef;image/x-ptx;image/x-pxn;image/x-r3d;image/x-raf;image/x-raw;image/x-rw2;image/x-rwl;image/x-rwz;image/x-sigma-x3f;image/x-sony-arw;image/x-sony-sr2;image/x-sony-srf;image/x-sr2;image/x-srf;image/x-x3f;image/x-panasonic-raw2;image/x-nikon-nrw; 
+    dest: /usr/share/thumbnailers/ufraw.thumbnailer
+
